add templates basic

--- a/studio/templates/base_generic.html
+++ b/studio/templates/base_generic.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-  {% block header %}{% endblock %}
+  {% block header %}
+  
+  {% endblock %}
   {% block content %}{% endblock %}
 </body>
 </html>
