--- a/studio/templates/index.html
+++ b/studio/templates/index.html
@@ -1,3 +1,3 @@
 {% extends "base_generic.html" %}
 
-{% block content %}Neco-Arc{% endblock %}
+{% block content %}Это главная страница{% endblock %}
