--- a/studio/templates/base_generic.html
+++ b/studio/templates/base_generic.html
@@ -42,7 +42,7 @@
                   <a class="nav-link" href="{% url 'register'%}?next={{request.path}}">Регистрация</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'login'%}?next={{request.path}}">Войти</a>
+                  <a class="nav-link" href="{% url 'loginuser'%}?next={{request.path}}">Войти</a>
                 </li>
                 {% endif %}
               </ul>
