--- a/studio/templates/base_generic.html
+++ b/studio/templates/base_generic.html
@@ -24,17 +24,13 @@
                   <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Домашняя страница</a>
                 </li>
                 {% if user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'logout'%}?next={{request.path}}">Выйти</a>
-                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Профиль
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="#">Мои заявки</a></li>
+                      <li><a class="dropdown-item" href="{% url 'logout'%}?next={{request.path}}">Выход</a></li>
                     </ul>
                 </li>
                 {% else %}
