--- a/studio/templates/base_generic.html
+++ b/studio/templates/base_generic.html
@@ -40,6 +40,9 @@
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'categorys'%}">Управление категориями</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'adminpleas'%}">Изменение статуса заявки</a>
+                  </li>
                   {% endif %}
                 {% else %}
                 <li class="nav-item">
