--- a/studio/templates/studio/admin_plea_list.html
+++ b/studio/templates/studio/admin_plea_list.html
@@ -15,7 +15,7 @@
         {% if plea.status == 'n' %}
         <p>Статус: Новая</p>
         <a href="#">Принять в работу</a><br>
-        <a href="{% url 'complete_plea' plea.id %}">Выполнить</a>
+        <a href="{% url 'plea_complete' plea.id %}">Выполнить</a>
         {% elif plea.status == 'c' %}
         <p>Статус: Выполнено</p>
         {% else %}
