--- a/studio/templates/studio/superuser_plea_list.html
+++ b/studio/templates/studio/superuser_plea_list.html
@@ -1,27 +1,20 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
+{% if user.is_superuser %}
   <h1>Все заявки</h1>
 
   {% if plea_list %}
     <ul>
       {% for plea in plea_list %}
-      {% if plea.adminUserName == user.username %}
+      {% if plea.adminUserName is Null%}
       <li>
         <hr>
         <p>Дата создания: {{ plea.creationDate }}</p>
         <p>Название: {{ plea.name }}</p>
         <p>Описание: {{ plea.description }}</p>
         <p>Категория: {{ plea.category }}</p>
-        {% if plea.status == 'n' %}
-        <p>Статус: Новая</p>
-        <a href="{% url 'plea_work' plea.id %}">Принять в работу</a><br>
-        <a href="{% url 'plea_complete' plea.id %}">Выполнить</a>
-        {% elif plea.status == 'c' %}
-        <p>Статус: Выполнено</p>
-        {% else %}
-        <p>Статус: принято в работу</p>
-        {% endif %}
+        <a href="{{ plea.get_absolute_url }}/addmin/"">Назначить администратора</a><br>
         <hr>
       </li>
       {% endif %}
@@ -30,4 +23,7 @@
   {% else %}
     <p>Нет заявок</p>
   {% endif %}
+{% else %}
+<p>У вас нет доступа к этой страницы</p>
+{% endif %}
 {% endblock %}
